# dont-touch-spikes

./: meson.build
include/: bird.h  spike.h
resources/: bird.xcf
src/: bird.c  main.c  spike.c
